Fixed a whole layout issue with widths
This reverts commit 36b0ce59632194acf737caa109d1bf56abc7885f.

--- a/src/assets/scss/components/_mainHeader.scss
+++ b/src/assets/scss/components/_mainHeader.scss
@@ -28,7 +28,7 @@
 
 .mainHeader__headline,
 .mainHeader__description {
-  grid-column: 3/4;
   padding-left: 1rem;
   padding-right: 1rem;
+  max-width: var(--textContentWidth);
 }
