--- a/src/assets/scss/components/_navigation.scss
+++ b/src/assets/scss/components/_navigation.scss
@@ -4,20 +4,18 @@
   position: sticky;
   top: 0;
   z-index: 1;
-}
-
-.navigation__lists {
-  display: grid;
-  grid-template-columns: 1fr 1fr minmax(auto, var(--containerWidth)) 1fr 1fr;
+  display: flex;
+  justify-content: center;
 }
 
 .navigation__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
-  grid-column: 3/4;
   list-style: none;
   padding-bottom: 0;
+  width: 100%;
+  max-width: var(--containerWidth);
   @media screen and (max-width: 768px) {
     justify-content: center;
   }
